k3s/apps/homarr/deployment.yaml
##  homarr deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: apps
  labels:
    source: community
    app: homarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: dexy
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7575
              name: http
              protocol: TCP
          volumeMounts:
            - name: appdata
              mountPath: /appdata
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: pvc-homarr
