k3s/apps/homarr/service.yaml
## homarr service

apiVersion: v1
kind: Service
metadata:
  name: svc-homarr
  namespace: apps
  labels:
    app: homarr
spec:
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: 7575
      protocol: TCP
      name: http
